fix padding and text size on mobile

--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -508,11 +508,11 @@ iframe { margin: 1em auto;  display: block; }
     }
 
     #content, .post_apply, .share_article_feedback {
-      padding: 0 20px !important;
+      padding: 0 15px !important;
     }
     .post_apply {
       h3, .contain_articles {
-        padding: 0 40px !important;
+        padding: 0 35px !important;
       }
     }
 }
@@ -544,7 +544,7 @@ iframe { margin: 1em auto;  display: block; }
     #content {
       padding: 0 15px;
       p {
-        font-size: 1em;
+        font-size: 17px;
       }
     }
 }
